[tool.poetry]
name = "distort"
version = "0.1.0"
description = ""
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
cmudict = "^0.4.4"
docopt = "^0.6.2"
tqdm = "^4.43.0"
pydash = "^4.7.6"
jellyfish = "^0.7.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.scripts]
distort = "distort.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
